fixing file pathing
Fixing file pathing

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: myFirstFont;
-  src: url(/../battleship/public/LondrinaSolid-Light.ttf);
+  src: url(/public/LondrinaSolid-Light.ttf);
 }
 * {
   font-family: myFirstFont;
