--- a/public/styles.css
+++ b/public/styles.css
@@ -381,7 +381,15 @@ body {
 }
 
 .player {
+    justify-content: center;
+    display: flex;
+    width: 100%;
     margin: 2vmin;
+    font-size: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    background-color: grey;
+    border-radius: .2em;
 }
 
 .connected, .set {
